tests/NormalTests/paczka1/fuzzy1/31872567.err
Error in line 3: S734 S734 84,9
Error in line 18: CCvvzEFGs1 A765 8,57
Error in line 17: rTgfvsR2bV S734 44,4
Error in line 9: CCvvzEFGs1 A765 2,6
Error in line 12: aaIWg A230 72,0
Error in line 20: CCvvzEFGs1 A817 58,1
